--- a/templates/pybo/detail.html
+++ b/templates/pybo/detail.html
@@ -1,13 +1,39 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>상세 보기 페이지</title>
-</head>
-<body>
-    <h2>{{ question.subject }}</h2>
-    <div>
-        {{ question.content }}
+<!-- 103p -->
+{% extends 'base.html' %}
+<!-- base.html과 연결(상속, 확장) -->
+{% block content %}
+    <div class="container my-3">
+        <!-- 질문 내용 -->
+        <h2 class="border-bottom py-2">{{ question.subject }}</h2>
+        <div class="card my-3">
+            <div class="card-body">
+                <div class="card-text">
+                    {{ question.content }}
+                </div>
+                <div class="d-flex justify-content-end">
+                    <div class="badge badge-light p-2">
+                        {{ question.create_date }}
+                    </div>
+                </div>
+            </div>
+        </div>
+        <h5 class="border-bottom my-3 py-2">
+            {{ question.answer_set.count }}개의 답변이 있습니다.
+        </h5>
+        <!-- 답변 내용 -->
+        {% for answer in question.answer_set.all %}
+        <div class="card my-3">
+            <div class="card-body">
+                <div class="card-text">
+                    {{ answer.content }}
+                </div>
+                <div class="d-flex justify-content-end">
+                    <div class="badge badge-light p-2">
+                        {{ answer.create_date }}
+                    </div>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
     </div>
-</body>
-</html>
+{% endblock %}
