--- a/templates/pybo/question_list.html
+++ b/templates/pybo/question_list.html
@@ -1,21 +1,32 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>index 페이지</title>
-</head>
-<body>
-    <h2>질문 목록</h2>
-    {% if question_list %}
-        <ul>
+<!-- 101p -->
+{% extends 'base.html' %}
+<!-- base.html과 연결(상속, 확장) -->
+{% block content %}
+<div class="container my-3">
+    <table class="table">
+        <thead>
+        <tr>
+            <th>번호</th>
+            <th>제목</th>
+            <th>작성일시</th>
+        </tr>
+        </thead>
+        <tbody>
+        {% if question_list %}
             {% for question in question_list %}
-            <li>
-                <a href="{% url 'pybo:detail' question.id %}">{{ question.subject }}</a>
-            </li>
+            <tr>
+                <td>{{ forloop.counter }}</td>
+                <td>
+                    <a href="{% url 'pybo:detail' question.id %}">
+                        {{ question.subject }}
+                    </a>
+                </td>
+                <td>{{ question.create_date }}</td>
+            </tr>
             {% endfor %}
-        </ul>
-    {% else %}
-        <p>질문이 없습니다.</p>
-    {% endif %}
-</body>
-</html>
+        {% endif %}
+        </tbody>
+    </table>
+    <a href="{% url 'pybo:question_create' %}" class="btn btn-primary">질문 등록</a>
+</div>
+{% endblock %}
