--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,3 @@
-<!-- 117p -->
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
@@ -9,10 +8,15 @@
     <!-- <link rel="stylesheet" href="{% static 'pybo/css/style.css' %}"> -->
 </head>
 <body>
+<!-- 네비게이션 바 -->
+{% include 'navbar.html' %}
 <!-- 기본 템플릿 안에 삽입될 내용 Start -->
 {% block content %}
 
 {% endblock %}
 <!-- 기본 템플릿 안에 삽입될 내용 End -->
+<script src="{% static 'pybo/js/jquery-3.6.0.js' %}"></script>
+<script src="{% static 'pybo/js/bootstrap.js' %}"></script>
+
 </body>
 </html>
