--- a/templates/pybo/detail.html
+++ b/templates/pybo/detail.html
@@ -7,7 +7,7 @@
         <h2 class="border-bottom py-2">{{ question.subject }}</h2>
         <div class="card my-3">
             <div class="card-body">
-                <div class="card-text">
+                <div class="card-text" style="white-space: pre-line">
                     {{ question.content }}
                 </div>
                 <div class="d-flex justify-content-end">
@@ -24,7 +24,7 @@
         {% for answer in question.answer_set.all %}
         <div class="card my-3">
             <div class="card-body">
-                <div class="card-text">
+                <div class="card-text" style="white-space: pre-line">
                     {{ answer.content }}
                 </div>
                 <div class="d-flex justify-content-end">
@@ -35,5 +35,13 @@
             </div>
         </div>
         {% endfor %}
+        <!-- 답편 폼 -->
+        <form action="{% url 'pybo:answer_create' question.id %}" method="post" class="my-3">
+            {% csrf_token %}
+            <div class="form-group">
+                <textarea name="content" id="content" rows="10" class="form-control"></textarea>
+            </div>
+            <input type="submit" value="답변 등록" class="btn btn-primary">
+        </form>
     </div>
 {% endblock %}
