--- a/templates/pybo/question_form.html
+++ b/templates/pybo/question_form.html
@@ -1,4 +1,3 @@
-<!-- 118p -->
 {% extends 'base.html' %}
 {% block content %}
 <div class="container">
@@ -10,7 +9,7 @@
             <div class="alert alert-danger" role="alert">
             {% for field in form %}
                 {% if field.errors %}
-                    {{ field.label }}
+                <strong>{{ field.label }}</strong>
                     {{ field.errors }}
                 {% endif %}
             {% endfor %}
