--- a/templates/pybo/question_list.html
+++ b/templates/pybo/question_list.html
@@ -4,9 +4,10 @@
 <div class="container my-3">
     <table class="table">
         <thead>
-        <tr>
+        <tr class="text-center thead-dark">
             <th>번호</th>
-            <th>제목</th>
+            <th style="width: 55%">제목</th>
+            <th>글쓴이</th>
             <th>작성일시</th>
         </tr>
         </thead>
@@ -20,6 +21,7 @@
                         {{ question.subject }}
                     </a>
                 </td>
+                <td>{{ question.author.username }}</td>
                 <td>{{ question.create_date }}</td>
             </tr>
             {% endfor %}
