--- a/templates/pybo/detail.html
+++ b/templates/pybo/detail.html
@@ -11,10 +11,16 @@
                     {{ question.content }}
                 </div>
                 <div class="d-flex justify-content-end">
-                    <div class="badge badge-light p-2">
-                        {{ question.create_date }}
+                    <div class="badge badge-light p-2 text-left">
+                        <div class="mb-2">{{ question.author.username }}</div>
+                        <div>{{ question.create_date }}</div>
                     </div>
                 </div>
+                {% if request.user == question.author %}
+                <div class="my-3">
+                    <a href="{% url 'pybo:question_modify' question.id %}" class="btn btn-sm btn-outline-secondary">수정</a>
+                </div>
+                {% endif %}
             </div>
         </div>
         <h5 class="border-bottom my-3 py-2">
@@ -28,8 +34,9 @@
                     {{ answer.content }}
                 </div>
                 <div class="d-flex justify-content-end">
-                    <div class="badge badge-light p-2">
-                        {{ answer.create_date }}
+                    <div class="badge badge-light p-2 text-left">
+                        <div class="mb-2">{{ answer.author.username }}</div>
+                        <div>{{ answer.create_date }}</div>
                     </div>
                 </div>
             </div>
@@ -39,7 +46,8 @@
         <form action="{% url 'pybo:answer_create' question.id %}" method="post" class="my-3">
             {% csrf_token %}
             <div class="form-group">
-                <textarea name="content" id="content" rows="10" class="form-control"></textarea>
+                <textarea name="content" id="content" rows="10" class="form-control"
+                          {% if not user.is_authenticated %}disabled {% endif %}></textarea>
             </div>
             <input type="submit" value="답변 등록" class="btn btn-primary">
         </form>
