--- a/templates/base.html
+++ b/templates/base.html
@@ -15,8 +15,13 @@
 
 {% endblock %}
 <!-- 기본 템플릿 안에 삽입될 내용 End -->
+<!-- 햄버거 메뉴 -->
 <script src="{% static 'pybo/js/jquery-3.6.0.js' %}"></script>
 <script src="{% static 'pybo/js/bootstrap.js' %}"></script>
+<!-- 자바스크립트 Start -->
+{% block script %}
 
+{% endblock %}
+<!-- 자바스크립트 End -->
 </body>
 </html>
