--- a/templates/pybo/detail.html
+++ b/templates/pybo/detail.html
@@ -1,4 +1,3 @@
-<!-- 103p -->
 {% extends 'base.html' %}
 <!-- base.html과 연결(상속, 확장) -->
 {% block content %}
@@ -18,7 +17,10 @@
                 </div>
                 {% if request.user == question.author %}
                 <div class="my-3">
-                    <a href="{% url 'pybo:question_modify' question.id %}" class="btn btn-sm btn-outline-secondary">수정</a>
+                    <a href="{% url 'pybo:question_modify' question.id %}"
+                       class="btn btn-sm btn-outline-secondary">수정</a>
+                    <a data-uri="{% url 'pybo:question_delete' question.id %}" href="#"
+                       class="delete btn btn-sm btn-outline-secondary">삭제</a>
                 </div>
                 {% endif %}
             </div>
@@ -52,4 +54,15 @@
             <input type="submit" value="답변 등록" class="btn btn-primary">
         </form>
     </div>
+{% endblock %}
+{% block script %}
+<script>
+    $(document).ready(function(){
+       $('.delete').on('click', function(){
+          if(confirm("정말로 삭제하시겠습니까?")){
+             location.href = $(this).data('uri');  // data-uri 경로 설정
+          }
+       });
+    });
+</script>
 {% endblock %}
