--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -27,6 +27,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'pybo:board' %}">질문/답변</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'poll:poll_list' %}">설문조사</a>
+                </li>
             </ul>
         </div>
     </nav>
