--- a/templates/pybo/question_list.html
+++ b/templates/pybo/question_list.html
@@ -3,6 +3,18 @@
 <!-- base.html과 연결(상속, 확장) -->
 {% block content %}
 <div class="container my-3">
+    <!-- 검색창 -->
+    <div class="row justify-content-end my-3">
+        <div class="col-4 input-group">
+            <input type="text" class="form-control kw"
+                   value="{{ kw|default_if_none:'' }}">
+            <div class="input-group-append">
+                <button class="btn btn-outline-secondary"
+                        type="button" id="btn_search">찾기</button>
+            </div>
+        </div>
+    </div>
+    <!-- 게시글 목록 -->
     <table class="table">
         <thead>
         <tr class="text-center thead-dark">
@@ -35,9 +47,8 @@
     <!-- 이전 페이지 -->
         {% if question_list.has_previous %}
         <li class="page-item">
-            <a class="page-link" href="?page={{ question_list.previous_page_number }}">
-                이전
-            </a>
+            <a class="page-link" href="#"
+               data-page="{{ question_list.previous_page_number }}">이전</a>
         </li>
         {% else %}
        <li class="page-item disabled">
@@ -66,9 +77,8 @@
     <!-- 다음 페이지-->
         {% if question_list.has_next %}
         <li class="page-item">
-            <a class="page-link" href="?page={{ question_list.next_page_number }}">
-                다음
-            </a>
+            <a class="page-link" href="#"
+               data-page="{{ question_list.next_page_number }}">다음</a>
         </li>
         {% else %}
        <li class="page-item disabled">
@@ -82,4 +92,30 @@
     <!-- 페이징 처리 끝 -->
     <a href="{% url 'pybo:question_create' %}" class="btn btn-primary">질문 등록</a>
 </div>
+<!-- 검색 폼-->
+<form id="searchForm" method="get" action="{% url 'pybo:board' %}">
+    <input type="hidden" name="kw" id="kw" value="{{ kw|default_if_none:'' }}">
+    <input type="hidden" name="page" id="page" value="{{ page }}">
+</form>
+{% endblock %}
+{% block script %}
+<script>
+    $(document).ready(function(){
+        // 페이지 번호 클릭
+        $(".page-link").on('click', function(){
+            $('#page').val($(this).data('page'));   // data-page의 page번호를 id가 page인 필드에 설정
+            $('#searchForm').submit();   // 폼을 전송
+        });
+
+
+        // 검색 버튼 클릭
+        $("#btn_search").on('click', function(){
+            $('#kw').val($('.kw').val()); // 입력된 kw값을 id가 kw인 필드에 설정
+            $('#page').val(1);  // 1페이지부터 검색
+            $('#searchForm').submit();   // 폼을 전송
+        });
+    });
+
+</script>
+
 {% endblock %}
