--- a/templates/poll/result.html
+++ b/templates/poll/result.html
@@ -1,21 +1,24 @@
 {% extends 'base.html' %}
-{% load static %}
 {% block content %}
     <div class="container my-3">
-        <section id="result">
-            <h3 class="border-bottom py-2">{{ question.question_text }} - 결과</h3>
-            <ul class="list-group list-group-flush">
-                {% for choice in question.choice_set.all  %}
-                <li class="list-group-item">
-                    {{ choice.choice_text }} -- {{ choice.votes }} votes
-                </li>
-                {% endfor %}
-            </ul>
-            <div class="mt-4" style="width: 200px;">
-                <div class="vote">
-                    <a href="{% url 'poll:detail' question.id %}" class="button">다시 투표하시겠습니까?</a>
+        <div class="row">
+            <div class="col-6">
+                <div class="card my-3">
+                    <div class="card-body">
+                        <div class="card-title" style="font-size: 1.3rem">투표 결과</div>
+                        <div class="card-text" style="line-height: 3rem">
+                            <ul>
+                                {% for choice in question.choice_set.all %}
+                                <li>
+                                    {{ choice.choice_text }} -- {{ choice.votes }} votes
+                                </li>
+                                {% endfor %}
+                            </ul>
+                            <a href="{% url 'poll:detail' question.id %}" class="btn btn-info">다시 투표하시겠습니까?</a>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </section>
+        </div>
     </div>
 {% endblock %}
