--- a/templates/pybo/question_list.html
+++ b/templates/pybo/question_list.html
@@ -19,6 +19,7 @@
         <thead>
         <tr class="text-center thead-dark">
             <th>번호</th>
+            <th>추천</th>
             <th style="width: 55%">제목</th>
             <th>글쓴이</th>
             <th>작성일시</th>
@@ -34,6 +35,13 @@
                     <a href="{% url 'pybo:detail' question.id %}">
                         {{ question.subject }}
                     </a>
+                </td>
+                <td>
+                    {% if question.voter.all.count > 0 %}
+                    <span class="badge badge-warning px-2 py-1">
+                        {{ question.voter.all.count }}
+                    </span>
+                    {% endif %}
                 </td>
                 <td>{{ question.author.username }}</td>
                 <td>{{ question.create_date }}</td>
