--- a/templates/pybo/detail.html
+++ b/templates/pybo/detail.html
@@ -48,7 +48,20 @@
                                class="delete btn btn-sm btn-outline-secondary">삭제</a>
                         </div>
                         {% endif %}
-                    </div>
+                        <!-- 질문 댓글 Start-->
+                        {% if question.comment_set.count > 0 %}
+                        <div class="mt-3">
+                            {% for comment in question.comment_set.all %}
+                                <div class="comment py-2 text-muted">
+                                    <span style="white-space: pre-line">{{ comment.content }}</span>
+                                </div>
+                            {% endfor %}
+                        </div>
+                        {% endif %}
+                        <div>
+                            <a href="{% url 'pybo:comment_create_question' question.id %}"><small>댓글 추가...</small></a>
+                        </div>
+                    </div><!-- card-body -->
                 </div> <!-- card 끝 -->
             </div>
         </div>
